IGNITE-15912 Merge SQL calcite query contexts refactoring to 3.0 (#454)